methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    n match {
    ^